refactor(cobol): convert statement classes to records for improved clarity